test/classes/initializers/phase1/hasIfImplicit.good
hasIfImplicit.chpl:5: In initializer:
hasIfImplicit.chpl:8: error: cannot initialize fields in an if statement in phase 1
